
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int test_pack_ACTCTXA () ;
 int test_pack_ACTCTXW () ;
 int test_pack_ACTCTX_SECTION_KEYED_DATA () ;
 int test_pack_ACTCTX_SECTION_KEYED_DATA_2600 () ;
 int test_pack_ACTCTX_SECTION_KEYED_DATA_ASSEMBLY_METADATA () ;
 int test_pack_ACTIVATION_CONTEXT_BASIC_INFORMATION () ;
 int test_pack_BY_HANDLE_FILE_INFORMATION () ;
 int test_pack_COMMCONFIG () ;
 int test_pack_COMMPROP () ;
 int test_pack_COMMTIMEOUTS () ;
 int test_pack_COMSTAT () ;
 int test_pack_CREATE_PROCESS_DEBUG_INFO () ;
 int test_pack_CREATE_THREAD_DEBUG_INFO () ;
 int test_pack_CRITICAL_SECTION () ;
 int test_pack_CRITICAL_SECTION_DEBUG () ;
 int test_pack_DCB () ;
 int test_pack_DEBUG_EVENT () ;
 int test_pack_ENUMRESLANGPROCA () ;
 int test_pack_ENUMRESLANGPROCW () ;
 int test_pack_ENUMRESNAMEPROCA () ;
 int test_pack_ENUMRESNAMEPROCW () ;
 int test_pack_ENUMRESTYPEPROCA () ;
 int test_pack_ENUMRESTYPEPROCW () ;
 int test_pack_EXCEPTION_DEBUG_INFO () ;
 int test_pack_EXIT_PROCESS_DEBUG_INFO () ;
 int test_pack_EXIT_THREAD_DEBUG_INFO () ;
 int test_pack_HW_PROFILE_INFOA () ;
 int test_pack_HW_PROFILE_INFOW () ;
 int test_pack_LOAD_DLL_DEBUG_INFO () ;
 int test_pack_LPBY_HANDLE_FILE_INFORMATION () ;
 int test_pack_LPCOMMCONFIG () ;
 int test_pack_LPCOMMPROP () ;
 int test_pack_LPCOMMTIMEOUTS () ;
 int test_pack_LPCOMSTAT () ;
 int test_pack_LPCRITICAL_SECTION () ;
 int test_pack_LPCRITICAL_SECTION_DEBUG () ;
 int test_pack_LPDCB () ;
 int test_pack_LPDEBUG_EVENT () ;
 int test_pack_LPEXCEPTION_POINTERS () ;
 int test_pack_LPEXCEPTION_RECORD () ;
 int test_pack_LPFIBER_START_ROUTINE () ;
 int test_pack_LPHW_PROFILE_INFOA () ;
 int test_pack_LPHW_PROFILE_INFOW () ;
 int test_pack_LPLONG () ;
 int test_pack_LPMEMORYSTATUS () ;
 int test_pack_LPMEMORYSTATUSEX () ;
 int test_pack_LPOFSTRUCT () ;
 int test_pack_LPOSVERSIONINFOA () ;
 int test_pack_LPOSVERSIONINFOEXA () ;
 int test_pack_LPOSVERSIONINFOEXW () ;
 int test_pack_LPOSVERSIONINFOW () ;
 int test_pack_LPOVERLAPPED () ;
 int test_pack_LPOVERLAPPED_COMPLETION_ROUTINE () ;
 int test_pack_LPPROCESS_HEAP_ENTRY () ;
 int test_pack_LPPROCESS_INFORMATION () ;
 int test_pack_LPPROGRESS_ROUTINE () ;
 int test_pack_LPSECURITY_ATTRIBUTES () ;
 int test_pack_LPSTARTUPINFOA () ;
 int test_pack_LPSTARTUPINFOW () ;
 int test_pack_LPSYSTEMTIME () ;
 int test_pack_LPSYSTEM_INFO () ;
 int test_pack_LPSYSTEM_POWER_STATUS () ;
 int test_pack_LPTHREAD_START_ROUTINE () ;
 int test_pack_LPTIME_ZONE_INFORMATION () ;
 int test_pack_LPVOID () ;
 int test_pack_LPWIN32_FILE_ATTRIBUTE_DATA () ;
 int test_pack_LPWIN32_FIND_DATAA () ;
 int test_pack_LPWIN32_FIND_DATAW () ;
 int test_pack_LPWIN32_STREAM_ID () ;
 int test_pack_MEMORYSTATUS () ;
 int test_pack_MEMORYSTATUSEX () ;
 int test_pack_OFSTRUCT () ;
 int test_pack_OSVERSIONINFOA () ;
 int test_pack_OSVERSIONINFOEXA () ;
 int test_pack_OSVERSIONINFOEXW () ;
 int test_pack_OSVERSIONINFOW () ;
 int test_pack_OUTPUT_DEBUG_STRING_INFO () ;
 int test_pack_PACTCTXA () ;
 int test_pack_PACTCTXW () ;
 int test_pack_PACTCTX_SECTION_KEYED_DATA () ;
 int test_pack_PACTCTX_SECTION_KEYED_DATA_2600 () ;
 int test_pack_PACTCTX_SECTION_KEYED_DATA_ASSEMBLY_METADATA () ;
 int test_pack_PACTIVATION_CONTEXT_BASIC_INFORMATION () ;
 int test_pack_PAPCFUNC () ;
 int test_pack_PBY_HANDLE_FILE_INFORMATION () ;
 int test_pack_PCACTCTXA () ;
 int test_pack_PCACTCTXW () ;
 int test_pack_PCACTCTX_SECTION_KEYED_DATA () ;
 int test_pack_PCACTCTX_SECTION_KEYED_DATA_2600 () ;
 int test_pack_PCACTCTX_SECTION_KEYED_DATA_ASSEMBLY_METADATA () ;
 int test_pack_PCRITICAL_SECTION () ;
 int test_pack_PCRITICAL_SECTION_DEBUG () ;
 int test_pack_PFIBER_START_ROUTINE () ;
 int test_pack_PHKEY () ;
 int test_pack_POFSTRUCT () ;
 int test_pack_POSVERSIONINFOA () ;
 int test_pack_POSVERSIONINFOEXA () ;
 int test_pack_POSVERSIONINFOEXW () ;
 int test_pack_POSVERSIONINFOW () ;
 int test_pack_PPROCESS_HEAP_ENTRY () ;
 int test_pack_PPROCESS_INFORMATION () ;
 int test_pack_PQUERYACTCTXW_FUNC () ;
 int test_pack_PROCESS_HEAP_ENTRY () ;
 int test_pack_PROCESS_INFORMATION () ;
 int test_pack_PSECURITY_ATTRIBUTES () ;
 int test_pack_PSYSTEMTIME () ;
 int test_pack_PTIMERAPCROUTINE () ;
 int test_pack_PTIME_ZONE_INFORMATION () ;
 int test_pack_PWIN32_FIND_DATAA () ;
 int test_pack_PWIN32_FIND_DATAW () ;
 int test_pack_RIP_INFO () ;
 int test_pack_SECURITY_ATTRIBUTES () ;
 int test_pack_STARTUPINFOA () ;
 int test_pack_STARTUPINFOW () ;
 int test_pack_SYSTEMTIME () ;
 int test_pack_SYSTEM_INFO () ;
 int test_pack_SYSTEM_POWER_STATUS () ;
 int test_pack_TIME_ZONE_INFORMATION () ;
 int test_pack_UNLOAD_DLL_DEBUG_INFO () ;
 int test_pack_WAITORTIMERCALLBACK () ;
 int test_pack_WIN32_FILE_ATTRIBUTE_DATA () ;
 int test_pack_WIN32_FIND_DATAA () ;
 int test_pack_WIN32_FIND_DATAW () ;
 int test_pack_WIN32_STREAM_ID () ;

__attribute__((used)) static void test_pack(void)
{
    test_pack_ACTCTXA();
    test_pack_ACTCTXW();
    test_pack_ACTCTX_SECTION_KEYED_DATA();
    test_pack_ACTCTX_SECTION_KEYED_DATA_2600();
    test_pack_ACTCTX_SECTION_KEYED_DATA_ASSEMBLY_METADATA();
    test_pack_ACTIVATION_CONTEXT_BASIC_INFORMATION();
    test_pack_BY_HANDLE_FILE_INFORMATION();
    test_pack_COMMCONFIG();
    test_pack_COMMPROP();
    test_pack_COMMTIMEOUTS();
    test_pack_COMSTAT();
    test_pack_CREATE_PROCESS_DEBUG_INFO();
    test_pack_CREATE_THREAD_DEBUG_INFO();
    test_pack_CRITICAL_SECTION();
    test_pack_CRITICAL_SECTION_DEBUG();
    test_pack_DCB();
    test_pack_DEBUG_EVENT();
    test_pack_ENUMRESLANGPROCA();
    test_pack_ENUMRESLANGPROCW();
    test_pack_ENUMRESNAMEPROCA();
    test_pack_ENUMRESNAMEPROCW();
    test_pack_ENUMRESTYPEPROCA();
    test_pack_ENUMRESTYPEPROCW();
    test_pack_EXCEPTION_DEBUG_INFO();
    test_pack_EXIT_PROCESS_DEBUG_INFO();
    test_pack_EXIT_THREAD_DEBUG_INFO();
    test_pack_HW_PROFILE_INFOA();
    test_pack_HW_PROFILE_INFOW();
    test_pack_LOAD_DLL_DEBUG_INFO();
    test_pack_LPBY_HANDLE_FILE_INFORMATION();
    test_pack_LPCOMMCONFIG();
    test_pack_LPCOMMPROP();
    test_pack_LPCOMMTIMEOUTS();
    test_pack_LPCOMSTAT();
    test_pack_LPCRITICAL_SECTION();
    test_pack_LPCRITICAL_SECTION_DEBUG();
    test_pack_LPDCB();
    test_pack_LPDEBUG_EVENT();
    test_pack_LPEXCEPTION_POINTERS();
    test_pack_LPEXCEPTION_RECORD();
    test_pack_LPFIBER_START_ROUTINE();
    test_pack_LPHW_PROFILE_INFOA();
    test_pack_LPHW_PROFILE_INFOW();
    test_pack_LPLONG();
    test_pack_LPMEMORYSTATUS();
    test_pack_LPMEMORYSTATUSEX();
    test_pack_LPOFSTRUCT();
    test_pack_LPOSVERSIONINFOA();
    test_pack_LPOSVERSIONINFOEXA();
    test_pack_LPOSVERSIONINFOEXW();
    test_pack_LPOSVERSIONINFOW();
    test_pack_LPOVERLAPPED();
    test_pack_LPOVERLAPPED_COMPLETION_ROUTINE();
    test_pack_LPPROCESS_HEAP_ENTRY();
    test_pack_LPPROCESS_INFORMATION();
    test_pack_LPPROGRESS_ROUTINE();
    test_pack_LPSECURITY_ATTRIBUTES();
    test_pack_LPSTARTUPINFOA();
    test_pack_LPSTARTUPINFOW();
    test_pack_LPSYSTEMTIME();
    test_pack_LPSYSTEM_INFO();
    test_pack_LPSYSTEM_POWER_STATUS();
    test_pack_LPTHREAD_START_ROUTINE();
    test_pack_LPTIME_ZONE_INFORMATION();
    test_pack_LPVOID();
    test_pack_LPWIN32_FILE_ATTRIBUTE_DATA();
    test_pack_LPWIN32_FIND_DATAA();
    test_pack_LPWIN32_FIND_DATAW();
    test_pack_LPWIN32_STREAM_ID();
    test_pack_MEMORYSTATUS();
    test_pack_MEMORYSTATUSEX();
    test_pack_OFSTRUCT();
    test_pack_OSVERSIONINFOA();
    test_pack_OSVERSIONINFOEXA();
    test_pack_OSVERSIONINFOEXW();
    test_pack_OSVERSIONINFOW();
    test_pack_OUTPUT_DEBUG_STRING_INFO();
    test_pack_PACTCTXA();
    test_pack_PACTCTXW();
    test_pack_PACTCTX_SECTION_KEYED_DATA();
    test_pack_PACTCTX_SECTION_KEYED_DATA_2600();
    test_pack_PACTCTX_SECTION_KEYED_DATA_ASSEMBLY_METADATA();
    test_pack_PACTIVATION_CONTEXT_BASIC_INFORMATION();
    test_pack_PAPCFUNC();
    test_pack_PBY_HANDLE_FILE_INFORMATION();
    test_pack_PCACTCTXA();
    test_pack_PCACTCTXW();
    test_pack_PCACTCTX_SECTION_KEYED_DATA();
    test_pack_PCACTCTX_SECTION_KEYED_DATA_2600();
    test_pack_PCACTCTX_SECTION_KEYED_DATA_ASSEMBLY_METADATA();
    test_pack_PCRITICAL_SECTION();
    test_pack_PCRITICAL_SECTION_DEBUG();
    test_pack_PFIBER_START_ROUTINE();
    test_pack_PHKEY();
    test_pack_POFSTRUCT();
    test_pack_POSVERSIONINFOA();
    test_pack_POSVERSIONINFOEXA();
    test_pack_POSVERSIONINFOEXW();
    test_pack_POSVERSIONINFOW();
    test_pack_PPROCESS_HEAP_ENTRY();
    test_pack_PPROCESS_INFORMATION();
    test_pack_PQUERYACTCTXW_FUNC();
    test_pack_PROCESS_HEAP_ENTRY();
    test_pack_PROCESS_INFORMATION();
    test_pack_PSECURITY_ATTRIBUTES();
    test_pack_PSYSTEMTIME();
    test_pack_PTIMERAPCROUTINE();
    test_pack_PTIME_ZONE_INFORMATION();
    test_pack_PWIN32_FIND_DATAA();
    test_pack_PWIN32_FIND_DATAW();
    test_pack_RIP_INFO();
    test_pack_SECURITY_ATTRIBUTES();
    test_pack_STARTUPINFOA();
    test_pack_STARTUPINFOW();
    test_pack_SYSTEMTIME();
    test_pack_SYSTEM_INFO();
    test_pack_SYSTEM_POWER_STATUS();
    test_pack_TIME_ZONE_INFORMATION();
    test_pack_UNLOAD_DLL_DEBUG_INFO();
    test_pack_WAITORTIMERCALLBACK();
    test_pack_WIN32_FILE_ATTRIBUTE_DATA();
    test_pack_WIN32_FIND_DATAA();
    test_pack_WIN32_FIND_DATAW();
    test_pack_WIN32_STREAM_ID();
}
