; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_generated.c_test_pack.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/kernel32/extr_generated.c_test_pack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_pack to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_pack() #0 {
  %1 = call i32 (...) @test_pack_ACTCTXA()
  %2 = call i32 (...) @test_pack_ACTCTXW()
  %3 = call i32 (...) @test_pack_ACTCTX_SECTION_KEYED_DATA()
  %4 = call i32 (...) @test_pack_ACTCTX_SECTION_KEYED_DATA_2600()
  %5 = call i32 (...) @test_pack_ACTCTX_SECTION_KEYED_DATA_ASSEMBLY_METADATA()
  %6 = call i32 (...) @test_pack_ACTIVATION_CONTEXT_BASIC_INFORMATION()
  %7 = call i32 (...) @test_pack_BY_HANDLE_FILE_INFORMATION()
  %8 = call i32 (...) @test_pack_COMMCONFIG()
  %9 = call i32 (...) @test_pack_COMMPROP()
  %10 = call i32 (...) @test_pack_COMMTIMEOUTS()
  %11 = call i32 (...) @test_pack_COMSTAT()
  %12 = call i32 (...) @test_pack_CREATE_PROCESS_DEBUG_INFO()
  %13 = call i32 (...) @test_pack_CREATE_THREAD_DEBUG_INFO()
  %14 = call i32 (...) @test_pack_CRITICAL_SECTION()
  %15 = call i32 (...) @test_pack_CRITICAL_SECTION_DEBUG()
  %16 = call i32 (...) @test_pack_DCB()
  %17 = call i32 (...) @test_pack_DEBUG_EVENT()
  %18 = call i32 (...) @test_pack_ENUMRESLANGPROCA()
  %19 = call i32 (...) @test_pack_ENUMRESLANGPROCW()
  %20 = call i32 (...) @test_pack_ENUMRESNAMEPROCA()
  %21 = call i32 (...) @test_pack_ENUMRESNAMEPROCW()
  %22 = call i32 (...) @test_pack_ENUMRESTYPEPROCA()
  %23 = call i32 (...) @test_pack_ENUMRESTYPEPROCW()
  %24 = call i32 (...) @test_pack_EXCEPTION_DEBUG_INFO()
  %25 = call i32 (...) @test_pack_EXIT_PROCESS_DEBUG_INFO()
  %26 = call i32 (...) @test_pack_EXIT_THREAD_DEBUG_INFO()
  %27 = call i32 (...) @test_pack_HW_PROFILE_INFOA()
  %28 = call i32 (...) @test_pack_HW_PROFILE_INFOW()
  %29 = call i32 (...) @test_pack_LOAD_DLL_DEBUG_INFO()
  %30 = call i32 (...) @test_pack_LPBY_HANDLE_FILE_INFORMATION()
  %31 = call i32 (...) @test_pack_LPCOMMCONFIG()
  %32 = call i32 (...) @test_pack_LPCOMMPROP()
  %33 = call i32 (...) @test_pack_LPCOMMTIMEOUTS()
  %34 = call i32 (...) @test_pack_LPCOMSTAT()
  %35 = call i32 (...) @test_pack_LPCRITICAL_SECTION()
  %36 = call i32 (...) @test_pack_LPCRITICAL_SECTION_DEBUG()
  %37 = call i32 (...) @test_pack_LPDCB()
  %38 = call i32 (...) @test_pack_LPDEBUG_EVENT()
  %39 = call i32 (...) @test_pack_LPEXCEPTION_POINTERS()
  %40 = call i32 (...) @test_pack_LPEXCEPTION_RECORD()
  %41 = call i32 (...) @test_pack_LPFIBER_START_ROUTINE()
  %42 = call i32 (...) @test_pack_LPHW_PROFILE_INFOA()
  %43 = call i32 (...) @test_pack_LPHW_PROFILE_INFOW()
  %44 = call i32 (...) @test_pack_LPLONG()
  %45 = call i32 (...) @test_pack_LPMEMORYSTATUS()
  %46 = call i32 (...) @test_pack_LPMEMORYSTATUSEX()
  %47 = call i32 (...) @test_pack_LPOFSTRUCT()
  %48 = call i32 (...) @test_pack_LPOSVERSIONINFOA()
  %49 = call i32 (...) @test_pack_LPOSVERSIONINFOEXA()
  %50 = call i32 (...) @test_pack_LPOSVERSIONINFOEXW()
  %51 = call i32 (...) @test_pack_LPOSVERSIONINFOW()
  %52 = call i32 (...) @test_pack_LPOVERLAPPED()
  %53 = call i32 (...) @test_pack_LPOVERLAPPED_COMPLETION_ROUTINE()
  %54 = call i32 (...) @test_pack_LPPROCESS_HEAP_ENTRY()
  %55 = call i32 (...) @test_pack_LPPROCESS_INFORMATION()
  %56 = call i32 (...) @test_pack_LPPROGRESS_ROUTINE()
  %57 = call i32 (...) @test_pack_LPSECURITY_ATTRIBUTES()
  %58 = call i32 (...) @test_pack_LPSTARTUPINFOA()
  %59 = call i32 (...) @test_pack_LPSTARTUPINFOW()
  %60 = call i32 (...) @test_pack_LPSYSTEMTIME()
  %61 = call i32 (...) @test_pack_LPSYSTEM_INFO()
  %62 = call i32 (...) @test_pack_LPSYSTEM_POWER_STATUS()
  %63 = call i32 (...) @test_pack_LPTHREAD_START_ROUTINE()
  %64 = call i32 (...) @test_pack_LPTIME_ZONE_INFORMATION()
  %65 = call i32 (...) @test_pack_LPVOID()
  %66 = call i32 (...) @test_pack_LPWIN32_FILE_ATTRIBUTE_DATA()
  %67 = call i32 (...) @test_pack_LPWIN32_FIND_DATAA()
  %68 = call i32 (...) @test_pack_LPWIN32_FIND_DATAW()
  %69 = call i32 (...) @test_pack_LPWIN32_STREAM_ID()
  %70 = call i32 (...) @test_pack_MEMORYSTATUS()
  %71 = call i32 (...) @test_pack_MEMORYSTATUSEX()
  %72 = call i32 (...) @test_pack_OFSTRUCT()
  %73 = call i32 (...) @test_pack_OSVERSIONINFOA()
  %74 = call i32 (...) @test_pack_OSVERSIONINFOEXA()
  %75 = call i32 (...) @test_pack_OSVERSIONINFOEXW()
  %76 = call i32 (...) @test_pack_OSVERSIONINFOW()
  %77 = call i32 (...) @test_pack_OUTPUT_DEBUG_STRING_INFO()
  %78 = call i32 (...) @test_pack_PACTCTXA()
  %79 = call i32 (...) @test_pack_PACTCTXW()
  %80 = call i32 (...) @test_pack_PACTCTX_SECTION_KEYED_DATA()
  %81 = call i32 (...) @test_pack_PACTCTX_SECTION_KEYED_DATA_2600()
  %82 = call i32 (...) @test_pack_PACTCTX_SECTION_KEYED_DATA_ASSEMBLY_METADATA()
  %83 = call i32 (...) @test_pack_PACTIVATION_CONTEXT_BASIC_INFORMATION()
  %84 = call i32 (...) @test_pack_PAPCFUNC()
  %85 = call i32 (...) @test_pack_PBY_HANDLE_FILE_INFORMATION()
  %86 = call i32 (...) @test_pack_PCACTCTXA()
  %87 = call i32 (...) @test_pack_PCACTCTXW()
  %88 = call i32 (...) @test_pack_PCACTCTX_SECTION_KEYED_DATA()
  %89 = call i32 (...) @test_pack_PCACTCTX_SECTION_KEYED_DATA_2600()
  %90 = call i32 (...) @test_pack_PCACTCTX_SECTION_KEYED_DATA_ASSEMBLY_METADATA()
  %91 = call i32 (...) @test_pack_PCRITICAL_SECTION()
  %92 = call i32 (...) @test_pack_PCRITICAL_SECTION_DEBUG()
  %93 = call i32 (...) @test_pack_PFIBER_START_ROUTINE()
  %94 = call i32 (...) @test_pack_PHKEY()
  %95 = call i32 (...) @test_pack_POFSTRUCT()
  %96 = call i32 (...) @test_pack_POSVERSIONINFOA()
  %97 = call i32 (...) @test_pack_POSVERSIONINFOEXA()
  %98 = call i32 (...) @test_pack_POSVERSIONINFOEXW()
  %99 = call i32 (...) @test_pack_POSVERSIONINFOW()
  %100 = call i32 (...) @test_pack_PPROCESS_HEAP_ENTRY()
  %101 = call i32 (...) @test_pack_PPROCESS_INFORMATION()
  %102 = call i32 (...) @test_pack_PQUERYACTCTXW_FUNC()
  %103 = call i32 (...) @test_pack_PROCESS_HEAP_ENTRY()
  %104 = call i32 (...) @test_pack_PROCESS_INFORMATION()
  %105 = call i32 (...) @test_pack_PSECURITY_ATTRIBUTES()
  %106 = call i32 (...) @test_pack_PSYSTEMTIME()
  %107 = call i32 (...) @test_pack_PTIMERAPCROUTINE()
  %108 = call i32 (...) @test_pack_PTIME_ZONE_INFORMATION()
  %109 = call i32 (...) @test_pack_PWIN32_FIND_DATAA()
  %110 = call i32 (...) @test_pack_PWIN32_FIND_DATAW()
  %111 = call i32 (...) @test_pack_RIP_INFO()
  %112 = call i32 (...) @test_pack_SECURITY_ATTRIBUTES()
  %113 = call i32 (...) @test_pack_STARTUPINFOA()
  %114 = call i32 (...) @test_pack_STARTUPINFOW()
  %115 = call i32 (...) @test_pack_SYSTEMTIME()
  %116 = call i32 (...) @test_pack_SYSTEM_INFO()
  %117 = call i32 (...) @test_pack_SYSTEM_POWER_STATUS()
  %118 = call i32 (...) @test_pack_TIME_ZONE_INFORMATION()
  %119 = call i32 (...) @test_pack_UNLOAD_DLL_DEBUG_INFO()
  %120 = call i32 (...) @test_pack_WAITORTIMERCALLBACK()
  %121 = call i32 (...) @test_pack_WIN32_FILE_ATTRIBUTE_DATA()
  %122 = call i32 (...) @test_pack_WIN32_FIND_DATAA()
  %123 = call i32 (...) @test_pack_WIN32_FIND_DATAW()
  %124 = call i32 (...) @test_pack_WIN32_STREAM_ID()
  ret void
}

declare dso_local i32 @test_pack_ACTCTXA(...) #1

declare dso_local i32 @test_pack_ACTCTXW(...) #1

declare dso_local i32 @test_pack_ACTCTX_SECTION_KEYED_DATA(...) #1

declare dso_local i32 @test_pack_ACTCTX_SECTION_KEYED_DATA_2600(...) #1

declare dso_local i32 @test_pack_ACTCTX_SECTION_KEYED_DATA_ASSEMBLY_METADATA(...) #1

declare dso_local i32 @test_pack_ACTIVATION_CONTEXT_BASIC_INFORMATION(...) #1

declare dso_local i32 @test_pack_BY_HANDLE_FILE_INFORMATION(...) #1

declare dso_local i32 @test_pack_COMMCONFIG(...) #1

declare dso_local i32 @test_pack_COMMPROP(...) #1

declare dso_local i32 @test_pack_COMMTIMEOUTS(...) #1

declare dso_local i32 @test_pack_COMSTAT(...) #1

declare dso_local i32 @test_pack_CREATE_PROCESS_DEBUG_INFO(...) #1

declare dso_local i32 @test_pack_CREATE_THREAD_DEBUG_INFO(...) #1

declare dso_local i32 @test_pack_CRITICAL_SECTION(...) #1

declare dso_local i32 @test_pack_CRITICAL_SECTION_DEBUG(...) #1

declare dso_local i32 @test_pack_DCB(...) #1

declare dso_local i32 @test_pack_DEBUG_EVENT(...) #1

declare dso_local i32 @test_pack_ENUMRESLANGPROCA(...) #1

declare dso_local i32 @test_pack_ENUMRESLANGPROCW(...) #1

declare dso_local i32 @test_pack_ENUMRESNAMEPROCA(...) #1

declare dso_local i32 @test_pack_ENUMRESNAMEPROCW(...) #1

declare dso_local i32 @test_pack_ENUMRESTYPEPROCA(...) #1

declare dso_local i32 @test_pack_ENUMRESTYPEPROCW(...) #1

declare dso_local i32 @test_pack_EXCEPTION_DEBUG_INFO(...) #1

declare dso_local i32 @test_pack_EXIT_PROCESS_DEBUG_INFO(...) #1

declare dso_local i32 @test_pack_EXIT_THREAD_DEBUG_INFO(...) #1

declare dso_local i32 @test_pack_HW_PROFILE_INFOA(...) #1

declare dso_local i32 @test_pack_HW_PROFILE_INFOW(...) #1

declare dso_local i32 @test_pack_LOAD_DLL_DEBUG_INFO(...) #1

declare dso_local i32 @test_pack_LPBY_HANDLE_FILE_INFORMATION(...) #1

declare dso_local i32 @test_pack_LPCOMMCONFIG(...) #1

declare dso_local i32 @test_pack_LPCOMMPROP(...) #1

declare dso_local i32 @test_pack_LPCOMMTIMEOUTS(...) #1

declare dso_local i32 @test_pack_LPCOMSTAT(...) #1

declare dso_local i32 @test_pack_LPCRITICAL_SECTION(...) #1

declare dso_local i32 @test_pack_LPCRITICAL_SECTION_DEBUG(...) #1

declare dso_local i32 @test_pack_LPDCB(...) #1

declare dso_local i32 @test_pack_LPDEBUG_EVENT(...) #1

declare dso_local i32 @test_pack_LPEXCEPTION_POINTERS(...) #1

declare dso_local i32 @test_pack_LPEXCEPTION_RECORD(...) #1

declare dso_local i32 @test_pack_LPFIBER_START_ROUTINE(...) #1

declare dso_local i32 @test_pack_LPHW_PROFILE_INFOA(...) #1

declare dso_local i32 @test_pack_LPHW_PROFILE_INFOW(...) #1

declare dso_local i32 @test_pack_LPLONG(...) #1

declare dso_local i32 @test_pack_LPMEMORYSTATUS(...) #1

declare dso_local i32 @test_pack_LPMEMORYSTATUSEX(...) #1

declare dso_local i32 @test_pack_LPOFSTRUCT(...) #1

declare dso_local i32 @test_pack_LPOSVERSIONINFOA(...) #1

declare dso_local i32 @test_pack_LPOSVERSIONINFOEXA(...) #1

declare dso_local i32 @test_pack_LPOSVERSIONINFOEXW(...) #1

declare dso_local i32 @test_pack_LPOSVERSIONINFOW(...) #1

declare dso_local i32 @test_pack_LPOVERLAPPED(...) #1

declare dso_local i32 @test_pack_LPOVERLAPPED_COMPLETION_ROUTINE(...) #1

declare dso_local i32 @test_pack_LPPROCESS_HEAP_ENTRY(...) #1

declare dso_local i32 @test_pack_LPPROCESS_INFORMATION(...) #1

declare dso_local i32 @test_pack_LPPROGRESS_ROUTINE(...) #1

declare dso_local i32 @test_pack_LPSECURITY_ATTRIBUTES(...) #1

declare dso_local i32 @test_pack_LPSTARTUPINFOA(...) #1

declare dso_local i32 @test_pack_LPSTARTUPINFOW(...) #1

declare dso_local i32 @test_pack_LPSYSTEMTIME(...) #1

declare dso_local i32 @test_pack_LPSYSTEM_INFO(...) #1

declare dso_local i32 @test_pack_LPSYSTEM_POWER_STATUS(...) #1

declare dso_local i32 @test_pack_LPTHREAD_START_ROUTINE(...) #1

declare dso_local i32 @test_pack_LPTIME_ZONE_INFORMATION(...) #1

declare dso_local i32 @test_pack_LPVOID(...) #1

declare dso_local i32 @test_pack_LPWIN32_FILE_ATTRIBUTE_DATA(...) #1

declare dso_local i32 @test_pack_LPWIN32_FIND_DATAA(...) #1

declare dso_local i32 @test_pack_LPWIN32_FIND_DATAW(...) #1

declare dso_local i32 @test_pack_LPWIN32_STREAM_ID(...) #1

declare dso_local i32 @test_pack_MEMORYSTATUS(...) #1

declare dso_local i32 @test_pack_MEMORYSTATUSEX(...) #1

declare dso_local i32 @test_pack_OFSTRUCT(...) #1

declare dso_local i32 @test_pack_OSVERSIONINFOA(...) #1

declare dso_local i32 @test_pack_OSVERSIONINFOEXA(...) #1

declare dso_local i32 @test_pack_OSVERSIONINFOEXW(...) #1

declare dso_local i32 @test_pack_OSVERSIONINFOW(...) #1

declare dso_local i32 @test_pack_OUTPUT_DEBUG_STRING_INFO(...) #1

declare dso_local i32 @test_pack_PACTCTXA(...) #1

declare dso_local i32 @test_pack_PACTCTXW(...) #1

declare dso_local i32 @test_pack_PACTCTX_SECTION_KEYED_DATA(...) #1

declare dso_local i32 @test_pack_PACTCTX_SECTION_KEYED_DATA_2600(...) #1

declare dso_local i32 @test_pack_PACTCTX_SECTION_KEYED_DATA_ASSEMBLY_METADATA(...) #1

declare dso_local i32 @test_pack_PACTIVATION_CONTEXT_BASIC_INFORMATION(...) #1

declare dso_local i32 @test_pack_PAPCFUNC(...) #1

declare dso_local i32 @test_pack_PBY_HANDLE_FILE_INFORMATION(...) #1

declare dso_local i32 @test_pack_PCACTCTXA(...) #1

declare dso_local i32 @test_pack_PCACTCTXW(...) #1

declare dso_local i32 @test_pack_PCACTCTX_SECTION_KEYED_DATA(...) #1

declare dso_local i32 @test_pack_PCACTCTX_SECTION_KEYED_DATA_2600(...) #1

declare dso_local i32 @test_pack_PCACTCTX_SECTION_KEYED_DATA_ASSEMBLY_METADATA(...) #1

declare dso_local i32 @test_pack_PCRITICAL_SECTION(...) #1

declare dso_local i32 @test_pack_PCRITICAL_SECTION_DEBUG(...) #1

declare dso_local i32 @test_pack_PFIBER_START_ROUTINE(...) #1

declare dso_local i32 @test_pack_PHKEY(...) #1

declare dso_local i32 @test_pack_POFSTRUCT(...) #1

declare dso_local i32 @test_pack_POSVERSIONINFOA(...) #1

declare dso_local i32 @test_pack_POSVERSIONINFOEXA(...) #1

declare dso_local i32 @test_pack_POSVERSIONINFOEXW(...) #1

declare dso_local i32 @test_pack_POSVERSIONINFOW(...) #1

declare dso_local i32 @test_pack_PPROCESS_HEAP_ENTRY(...) #1

declare dso_local i32 @test_pack_PPROCESS_INFORMATION(...) #1

declare dso_local i32 @test_pack_PQUERYACTCTXW_FUNC(...) #1

declare dso_local i32 @test_pack_PROCESS_HEAP_ENTRY(...) #1

declare dso_local i32 @test_pack_PROCESS_INFORMATION(...) #1

declare dso_local i32 @test_pack_PSECURITY_ATTRIBUTES(...) #1

declare dso_local i32 @test_pack_PSYSTEMTIME(...) #1

declare dso_local i32 @test_pack_PTIMERAPCROUTINE(...) #1

declare dso_local i32 @test_pack_PTIME_ZONE_INFORMATION(...) #1

declare dso_local i32 @test_pack_PWIN32_FIND_DATAA(...) #1

declare dso_local i32 @test_pack_PWIN32_FIND_DATAW(...) #1

declare dso_local i32 @test_pack_RIP_INFO(...) #1

declare dso_local i32 @test_pack_SECURITY_ATTRIBUTES(...) #1

declare dso_local i32 @test_pack_STARTUPINFOA(...) #1

declare dso_local i32 @test_pack_STARTUPINFOW(...) #1

declare dso_local i32 @test_pack_SYSTEMTIME(...) #1

declare dso_local i32 @test_pack_SYSTEM_INFO(...) #1

declare dso_local i32 @test_pack_SYSTEM_POWER_STATUS(...) #1

declare dso_local i32 @test_pack_TIME_ZONE_INFORMATION(...) #1

declare dso_local i32 @test_pack_UNLOAD_DLL_DEBUG_INFO(...) #1

declare dso_local i32 @test_pack_WAITORTIMERCALLBACK(...) #1

declare dso_local i32 @test_pack_WIN32_FILE_ATTRIBUTE_DATA(...) #1

declare dso_local i32 @test_pack_WIN32_FIND_DATAA(...) #1

declare dso_local i32 @test_pack_WIN32_FIND_DATAW(...) #1

declare dso_local i32 @test_pack_WIN32_STREAM_ID(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
